--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Inicio</title>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
+	<title>Inicio</title>
+	<link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
 	<!--CABECERA-->
-<header>
-<h1>MATEMATICAS PARA INGENIERIA</h1>
-</header>
 </head>
+
 <body>
-	<a class="boton" href="temario.html">VAMOOS!</a>
+	<h1>MATEMATICAS PARA INGENIERIA</h1>
+	<div id="boton">
+		<a href="temario.html">VAMOOS!</a>
+	</div>
 </body>
 <footer>
 	<p id="pie">Fernando Hernandez Vazquez | Fernando Perez Suarez</p>
 </footer>
-</html>
 
+</html>
