Cuadro de contenidos listo

--- a/temario.html
+++ b/temario.html
@@ -29,7 +29,7 @@
         </ul>
     </div>
 </container>
-
+<div class="clearfix"></div>
 <footer>
 	<p class="pie">Fernando Hernandez Vazquez | Fernando Perez Suarez</p>
 </footer>
