indice de temario completo

--- a/temario.html
+++ b/temario.html
@@ -1,37 +1,67 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
+    <meta charset="utf-8">
 <head>
     <title>Temario</title>
     <link rel='stylesheet' type='text/css' media='screen' href='css/temario.css'>
-	<!--CABECERA-->
-<header>
-<h1>TEMARIO</h1>
-</header>
+    <!--CABECERA-->
+    <header>
+        <h1>TEMARIO</h1>
+    </header>
 </head>
-	<body>
-	<nav>
-	<a href="index.html">INICIO</a>
-	<a href="temario.html">TEMARIO</a>
-	<a href="#">EJERCICIOS</a>
-	<a href="#">REFERENCIAS</a>
-    <a href="#">ACERCA DE</a>
-	<div class="animation start-home"></div>
-</nav>
-<br>
-<br>
-<container id=contenedor>
-    <div class="contenidos">
-        <p class="titulo" id="titulo">Contenidos</p>
-        <ul class="lista">
-            <li><a href="">indice</a></li>
-            <li><a href="">indice</a></li>
-            <li><a href="">indice</a></li>
+
+<body>
+    <!--
+     <nav id="menu">
+        <ul>
+            <li><a href="index.html">INICIO</a></li>
+            <li><a href="temario.html">TEMARIO</a></li>
+            <li><a href="#">EJERCICIOS</a></li>
+            <li><a href="#">REFERENCIAS</a></li>
+            <li><a href="#">ACERCA DE</a></li>
+            <div class="clearfix"></div>
         </ul>
-    </div>
-</container>
-<div class="clearfix"></div>
-<footer>
-	<p class="pie">Fernando Hernandez Vazquez | Fernando Perez Suarez</p>
-</footer>
+    </nav>
+    -->
+    <br>
+    <br>
+    <container id=contenedor>
+        <div class="contenidos">
+            <p class="titulo">Contenidos</p>
+            <ul class="lista">
+                <p class="unidad">Unidad 1</p>
+                <li><a href="">Funciones escalares de varias variables</a></li>
+                <br>
+                <li><a href="">Planos y superficies</a></li>
+                <br>
+                <li><a href="">Limites y continuidad en funciones de 3 variables</a></li>
+                <br>
+                <p class="unidad">Unidad 2</p>
+                <li><a href="">La derivada parcial</a></li>
+                <br>
+                <li><a href="">Vector gradiente y derivada direccional</a></li>
+                <br>
+                <li><a href="">Extremos de funciones multivariables</a></li>
+                <p class="unidad">Unidad 3</p>
+                <li><a href="">Integral doble y triple</a></li>
+                <br>
+                <li><a href="">Area de regiones generales</a></li>
+                <br>
+                <li><a href="">Volumenes</a></li>
+                <p class="unidad">Unidad 4</p>
+                <li><a href="">Ecuaciones paramétricas</a></li>
+                <br>
+                <li><a href="">Calculo en funciones vectoriales</a></li>
+                <br>
+                <li><a href="">Integral en linea</a></li>
+            </ul>
+
+        </div>
+    </container>
+    <div class="clearfix"></div>
+    <footer>
+        <p class="pie">Fernando Hernandez Vazquez | Fernando Perez Suarez</p>
+    </footer>
 </body>
+
 </html>
