pagina de temas completa

--- a/temas/unidad1/funciones.html
+++ b/temas/unidad1/funciones.html
@@ -1,37 +1,33 @@
 <!DOCTYPE html>
 <html lang="es">
-    <meta charset="utf-8">
+<meta charset="utf-8">
 <head>
     <title>Temario</title>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/temario.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='../../css/temas.css'>
     <!--CABECERA-->
     <header>
-        <h1>TEMARIO</h1>
+        <h1>UNIDAD 1</h1>
     </header>
 </head>
-
 <body>
-    <!--TODO Arreglar menu-->
-    <!--
-     <nav id="menu">
-        <ul>
-            <li><a href="index.html">INICIO</a></li>
-            <li><a href="temario.html">TEMARIO</a></li>
-            <li><a href="#">EJERCICIOS</a></li>
-            <li><a href="#">REFERENCIAS</a></li>
-            <li><a href="#">ACERCA DE</a></li>
-            <div class="clearfix"></div>
-        </ul>
-    </nav>
-    -->
-    <br>
-    <br>
+    <container class="info">
+        <div>
+            <p class="unidad">FUNCIONES ESCALARES DE VARIAS VARIABLES</p>
+        </div>
+        <br>
+        <div class="texto">
+Supongamos que tenemos una placa rectangular R y determinamos la temperatura T 
+en cada uno de sus puntos. Fijado un sistema de referencia, T
+es una función que depende de las coordenadas (x, y) de cada uno de los
+puntos de R. La función que describe este fenómeno
+        </div>
+    </container>
     <container id=contenedor>
         <div class="contenidos">
             <p class="titulo">Contenidos</p>
             <ul class="lista">
                 <p class="unidad">Unidad 1</p>
-                <li><a href="temas/unidad1/funciones.html">Funciones escalares de varias variables</a></li>
+                <li><a href="../../temas/unidad1/funciones.html">Funciones escalares de varias variables</a></li>
                 <br>
                 <li><a href="">Planos y superficies</a></li>
                 <br>
@@ -59,10 +55,6 @@
 
         </div>
     </container>
-    <div class="clearfix"></div>
-    <footer>
-        <p class="pie">Fernando Hernandez Vazquez | Fernando Perez Suarez</p>
-    </footer>
 </body>
 
 </html>
