diseño de unidades corregido

--- a/temas/unidad1/funciones.html
+++ b/temas/unidad1/funciones.html
@@ -1,60 +1,98 @@
 <!DOCTYPE html>
 <html lang="es">
-<meta charset="utf-8">
+
 <head>
-    <title>Temario</title>
-    <link rel='stylesheet' type='text/css' media='screen' href='../../css/temas.css'>
-    <!--CABECERA-->
-    <header>
-        <h1>UNIDAD 1</h1>
-    </header>
+    <meta charset="utf-8">
+    <title>Unidad 1</title>
+    <link rel="stylesheet" type="text/css" href="../../css/temas.css" />
 </head>
+
 <body>
-    <container class="info">
-        <div>
-            <p class="unidad">FUNCIONES ESCALARES DE VARIAS VARIABLES</p>
-        </div>
-        <br>
-        <div class="texto">
-Supongamos que tenemos una placa rectangular R y determinamos la temperatura T 
-en cada uno de sus puntos. Fijado un sistema de referencia, T
-es una función que depende de las coordenadas (x, y) de cada uno de los
-puntos de R. La función que describe este fenómeno
-        </div>
-    </container>
-    <container id=contenedor>
-        <div class="contenidos">
-            <p class="titulo">Contenidos</p>
-            <ul class="lista">
-                <p class="unidad">Unidad 1</p>
-                <li><a href="../../temas/unidad1/funciones.html">Funciones escalares de varias variables</a></li>
+    <div id="general">
+        <header id="header">
+            <h1>
+                UNIDAD 1
+            </h1>
+        </header>
+        <nav id="menu">
+            <ul>
+                <li><a href="#">INICIO</a></li>
+                <li><a href="#">TEMARIO</a></li>
+                <li><a href="#">EJERCICIOS</a></li>
+                <li><a href="#">REFERENCIAS</a></li>
+                <li><a href="#">ACERCA DE </a></li>
+            </ul>
+            <div class="clearfix"></div>
+        </nav>
+        <section id="contenido">
+            <h1>FUNCIONES ESCALARES DE VARIAS VARIABLES</h1>
+            <div class="caja">
+                <div class="texto">
+                    Supongamos que tenemos una placa rectangular R y determinamos la temperatura T
+                    en cada uno de sus puntos. Fijado un sistema de referencia, T
+                    es una función que depende de las coordenadas (x, y) de cada uno de los
+                    puntos de R. La función que describe este fenómeno
+                </div>
+                <div class="texto">
+                    Supongamos que tenemos una placa rectangular R y determinamos la temperatura T
+                    en cada uno de sus puntos. Fijado un sistema de referencia, T
+                    es una función que depende de las coordenadas (x, y) de cada uno de los
+                    puntos de R. La función que describe este fenómeno
+                </div>
+                <div class="texto">
+                    Supongamos que tenemos una placa rectangular R y determinamos la temperatura T
+                    en cada uno de sus puntos. Fijado un sistema de referencia, T
+                    es una función que depende de las coordenadas (x, y) de cada uno de los
+                    puntos de R. La función que describe este fenómeno
+                </div>
+            </div>
+        </section>
+        <aside id="lateral">
+            <div class="caja">
+                <h2>TEMARIO</h2>
+                <nav id="temario">
+                    <p class="unidad">Unidad 1</p>
+                    <br>
+                    <ul>
+                        <li><a href="../../temas/unidad1/funciones.html">Funciones escalares de varias variables</a></li>
                 <br>
                 <li><a href="">Planos y superficies</a></li>
                 <br>
                 <li><a href="">Limites y continuidad en funciones de 3 variables</a></li>
                 <br>
                 <p class="unidad">Unidad 2</p>
+                <br>
                 <li><a href="">La derivada parcial</a></li>
                 <br>
                 <li><a href="">Vector gradiente y derivada direccional</a></li>
                 <br>
                 <li><a href="">Extremos de funciones multivariables</a></li>
+                <br>
                 <p class="unidad">Unidad 3</p>
+                <br>
                 <li><a href="">Integral doble y triple</a></li>
                 <br>
                 <li><a href="">Area de regiones generales</a></li>
                 <br>
                 <li><a href="">Volumenes</a></li>
+                <br>
                 <p class="unidad">Unidad 4</p>
+                <br>
                 <li><a href="">Ecuaciones paramétricas</a></li>
                 <br>
                 <li><a href="">Calculo en funciones vectoriales</a></li>
                 <br>
                 <li><a href="">Integral en linea</a></li>
-            </ul>
-
-        </div>
-    </container>
+                <br>
+                    </ul>
+                </nav>
+            </div>
+        </aside>
+        <div class="clearfix"></div>
+        <footer id="footer">
+            Todos los derechos reservados &copy Fernando
+        </footer>
+    </div>
 </body>
 
 </html>
