pagina de referencias arreglada

--- a/referencias.html
+++ b/referencias.html
@@ -5,47 +5,72 @@
     <title>Temario</title>
     <link rel='stylesheet' type='text/css' media='screen' href='css/referencias.css'>
     <!--CABECERA-->
-    <header>
-        <h1>REFERENCIAS</h1>
-    </header>
 </head>
 
 <body>
-    <br>
-    <br>
-    <container id=contenedor>
-        <div class="contenidos">
-            <p class="titulo">Contenidos</p>
-            <ul class="lista">
-                <p class="unidad">Unidad 1</p>
-                <li>Funciones escalares de varias variables</li>
-                <br>
-                <li>Planos y superficies</a></li>
-                <br>
-                <li>Limites y continuidad en funciones de 3 variables</li>
-                <br>
-                <p class="unidad">Unidad 2</p>
-                <li>La derivada parcial</li>
-                <br>
-                <li>Vector gradiente y derivada direccional</li>
-                <br>
-                <li>Extremos de funciones multivariables</li>
-                <p class="unidad">Unidad 3</p>
-                <li>Integral doble y triple</li>
-                <br>
-                <li>Area de regiones generales</li>
-                <br>
-                <li>Volumenes</li>
-                <p class="unidad">Unidad 4</p>
-                <li>Ecuaciones paramétricas </li>
-                <br>
-                <li>Calculo en funciones vectoriales</li>
-                <br>
-                <li>Integral en linea</li>
+    <div id="general">
+        <header id="header">
+            <h1>
+                REFERENCIAS
+            </h1>
+        </header>
+        <nav id="menu">
+            <ul>
+                <li><a href="index.html">INICIO</a></li>
+                <li><a href="temario.html">TEMARIO</a></li>
+                <li><a href="#">EJERCICIOS</a></li>
+                <li><a href="referencias.html">REFERENCIAS</a></li>
+                <li><a href="#">ACERCA DE </a></li>
             </ul>
-
-        </div>
-    </container>
+            <div class="clearfix"></div>
+        </nav>
+        <container id=contenedor>
+            <div class="contenidos">
+                <p class="titulo">Contenidos</p>
+                <ul class="lista">
+                    <br>
+                    <p class="unidad">Unidad 1</p>
+                    <br>
+                    <li>Funciones escalares de varias variables</li>
+                    <br>
+                    <p class="link"><a href="https://sites.google.com/site/calculovectorialhakim/funciones-de-varias-variables">
+                        Funciones de varias variables - Diario de Cálculo Vectorial.
+                         (s. f.). Recuperado 6 de abril de 2021.
+                    </a></p>
+                    <br>
+                    <li>Planos y superficies</a></li>
+                    <br>
+                    <li>Limites y continuidad en funciones de 3 variables</li>
+                    <br>
+                    <p class="unidad">Unidad 2</p>
+                    <br>
+                    <li>La derivada parcial</li>
+                    <br>
+                    <li>Vector gradiente y derivada direccional</li>
+                    <br>
+                    <li>Extremos de funciones multivariables</li>
+                    <br>
+                    <p class="unidad">Unidad 3</p>
+                    <br>
+                    <li>Integral doble y triple</li>
+                    <br>
+                    <li>Area de regiones generales</li>
+                    <br>
+                    <li>Volumenes</li>
+                    <br>
+                    <p class="unidad">Unidad 4</p>
+                    <br>
+                    <li>Ecuaciones paramétricas </li>
+                    <br>
+                    <li>Calculo en funciones vectoriales</li>
+                    <br>
+                    <li>Integral en linea</li>
+                </ul>
+    
+            </div>
+        </container>
+    </div>
+    
     <div class="clearfix"></div>
     <footer>
         <p class="pie">Fernando Hernandez Vazquez | Fernando Perez Suarez</p>
