--- a/temas/unidad1/funciones.html
+++ b/temas/unidad1/funciones.html
@@ -16,10 +16,10 @@
         </header>
         <nav id="menu">
             <ul>
-                <li><a href="#">INICIO</a></li>
-                <li><a href="#">TEMARIO</a></li>
+                <li><a href="../../index.html">INICIO</a></li>
+                <li><a href="../../temario.html">TEMARIO</a></li>
                 <li><a href="#">EJERCICIOS</a></li>
-                <li><a href="#">REFERENCIAS</a></li>
+                <li><a href="../../referencias.html">REFERENCIAS</a></li>
                 <li><a href="#">ACERCA DE </a></li>
             </ul>
             <div class="clearfix"></div>
