diseño de temario corregido

--- a/temas/unidad1/funciones.html
+++ b/temas/unidad1/funciones.html
@@ -28,10 +28,13 @@
             <h1>FUNCIONES ESCALARES DE VARIAS VARIABLES</h1>
             <div class="caja">
                 <div class="texto">
-                    Supongamos que tenemos una placa rectangular R y determinamos la temperatura T
-                    en cada uno de sus puntos. Fijado un sistema de referencia, T
-                    es una función que depende de las coordenadas (x, y) de cada uno de los
-                    puntos de R. La función que describe este fenómeno
+                    Una función es una relación entre dos conjuntos donde a cada elemento del primer conjunto
+                     le corresponde un solo elemento del segundo conjunto. 
+                     Esta es la definición matemática de una función.
+                      Existen funciones comunes que poseen una variable independiente (x)  
+                      que cambia libremente sin depender de ningún parámetro y una variable dependiente (y) 
+                      que cambia respecto a x. El cambio que sufre y está definido por una expresión algebraica 
+                      que funge como regla. 
                 </div>
                 <div class="texto">
                     Supongamos que tenemos una placa rectangular R y determinamos la temperatura T
