--- a/temario.html
+++ b/temario.html
@@ -3,62 +3,70 @@
     <meta charset="utf-8">
 <head>
     <title>Temario</title>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/temario.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/referencias.css'>
     <!--CABECERA-->
-    <header>
-        <h1>TEMARIO</h1>
-    </header>
 </head>
 
 <body>
-    <!--TODO Arreglar menu-->
-    <!--
-     <nav id="menu">
-        <ul>
-            <li><a href="index.html">INICIO</a></li>
-            <li><a href="temario.html">TEMARIO</a></li>
-            <li><a href="#">EJERCICIOS</a></li>
-            <li><a href="#">REFERENCIAS</a></li>
-            <li><a href="#">ACERCA DE</a></li>
-            <div class="clearfix"></div>
-        </ul>
-    </nav>
-    -->
-    <br>
-    <br>
-    <container id=contenedor>
-        <div class="contenidos">
-            <p class="titulo">Contenidos</p>
-            <ul class="lista">
-                <p class="unidad">Unidad 1</p>
-                <li><a href="temas/unidad1/funciones.html">Funciones escalares de varias variables</a></li>
-                <br>
-                <li><a href="">Planos y superficies</a></li>
-                <br>
-                <li><a href="">Limites y continuidad en funciones de 3 variables</a></li>
-                <br>
-                <p class="unidad">Unidad 2</p>
-                <li><a href="">La derivada parcial</a></li>
-                <br>
-                <li><a href="">Vector gradiente y derivada direccional</a></li>
-                <br>
-                <li><a href="">Extremos de funciones multivariables</a></li>
-                <p class="unidad">Unidad 3</p>
-                <li><a href="">Integral doble y triple</a></li>
-                <br>
-                <li><a href="">Area de regiones generales</a></li>
-                <br>
-                <li><a href="">Volumenes</a></li>
-                <p class="unidad">Unidad 4</p>
-                <li><a href="">Ecuaciones paramétricas</a></li>
-                <br>
-                <li><a href="">Calculo en funciones vectoriales</a></li>
-                <br>
-                <li><a href="">Integral en linea</a></li>
+    <div id="general">
+        <header id="header">
+            <h1>
+                REFERENCIAS
+            </h1>
+        </header>
+        <nav id="menu">
+            <ul>
+                <li><a href="index.html">INICIO</a></li>
+                <li><a href="temario.html">TEMARIO</a></li>
+                <li><a href="#">EJERCICIOS</a></li>
+                <li><a href="referencias.html">REFERENCIAS</a></li>
+                <li><a href="#">ACERCA DE </a></li>
             </ul>
-
-        </div>
-    </container>
+            <div class="clearfix"></div>
+        </nav>
+        <container id=contenedor>
+            <div class="contenidos">
+                <p class="titulo">Contenidos</p>
+                <ul class="lista">
+                    <br>
+                    <p class="unidad">Unidad 1</p>
+                    <br>
+                    <li><a href="temas/unidad1/funciones.html">Funciones escalares de varias variables</a></li>
+                    <br>
+                    <br>
+                    <li>Planos y superficies</a></li>
+                    <br>
+                    <li>Limites y continuidad en funciones de 3 variables</li>
+                    <br>
+                    <p class="unidad">Unidad 2</p>
+                    <br>
+                    <li>La derivada parcial</li>
+                    <br>
+                    <li>Vector gradiente y derivada direccional</li>
+                    <br>
+                    <li>Extremos de funciones multivariables</li>
+                    <br>
+                    <p class="unidad">Unidad 3</p>
+                    <br>
+                    <li>Integral doble y triple</li>
+                    <br>
+                    <li>Area de regiones generales</li>
+                    <br>
+                    <li>Volumenes</li>
+                    <br>
+                    <p class="unidad">Unidad 4</p>
+                    <br>
+                    <li>Ecuaciones paramétricas </li>
+                    <br>
+                    <li>Calculo en funciones vectoriales</li>
+                    <br>
+                    <li>Integral en linea</li>
+                </ul>
+    
+            </div>
+        </container>
+    </div>
+    
     <div class="clearfix"></div>
     <footer>
         <p class="pie">Fernando Hernandez Vazquez | Fernando Perez Suarez</p>
