contenido de funciones

--- a/temas/unidad1/planos.html
+++ b/temas/unidad1/planos.html
@@ -25,48 +25,78 @@
             <div class="clearfix"></div>
         </nav>
         <section id="contenido">
-            <h1>FUNCIONES ESCALARES DE VARIAS VARIABLES</h1>
+            <h1>PLANOS Y SUPERFICIES</h1>
             <div class="caja">
                 <div class="texto">
-                    Una función es una relación entre dos conjuntos donde a cada elemento del primer conjunto
-                    le corresponde un solo elemento del segundo conjunto.
-                    Esta es la definición matemática de una función.
-                    Existen funciones comunes que poseen una variable independiente (x)
-                    que cambia libremente sin depender de ningún parámetro y una variable dependiente (y)
-                    que cambia respecto a x. El cambio que sufre y está definido por una expresión algebraica
-                    que funge como regla.
+                    PLANOS
                 </div>
                 <div class="texto">
-                    Las funciones de varias variables son funciones como cualquier otra, cumplen la misma definición de función; una relación.
-                    La diferencia es que una variable dependiente estará regida por más de una variables independiente.
+                    El plano tiene dos dimensiones: longitud y anchura.
+                    Un plano se representa mediante un paralelogramo de lados menores oblicuos.
+                    Se designan mediante letras griegas: α (alfa), β (beta)...
+                </div>
+                <div class="texto">
+                    Los planos vienen determinados por:
+                </div>
+                <div class="texto">
+                    3 puntos no alineados.
+                </div>
+                <div class="texto">
+                    Dos rectas que se cortan
+                </div>
+                <div class="texto">
+                    Dos rectar paralelas
+                </div>
+                <div class="texto">
+                    Un punto y una recta
+                </div>
+                <div class="texto">
+                    Cualquier plano puede representarse mediante la ecuación:
+                </div>
+                <div class="texto">
+                    ax + by + cz + d = 0 , donde a, b, c y d son constantes reales.
                 </div>
                 <div class="imagen">
-                    <p style="text-align: center; "> <img src="../../imagenes/unidad 1/funcion.jpg" alt="imagen 1" width="400" height="200"></p>
+                    <p style="text-align: center; "> <img src="../../imagenes/unidad 1/planos.JPG" alt="imagen 1" width="400" height="200"></p>
                 </div>
                 <div class="texto">
-                    Se llama gráfica de una función f de dos variables al conjunto de todos los
-                    puntos del espacio con coordenadas (x, y, z) tales que (x, y) está en el dominio de f y z = f (x, y).
-                    Llamando S a la superficie que representa la gráfica de f , entonces:
+                    SUPERFICIES CUADRÁTICAS
                 </div>
                 <div class="texto">
-                    S = {(x, y, z) : (x, y) ∈ Dom ( f ), z = f (x, y)} = {(x, y, f (x, y) ) : (x, y) ∈ Dom ( f )}
+                    Este tipo de superficies en el espacio son las análogas a las secciones cónicas en R2.
                 </div>
                 <div class="texto">
-                    LIMITES DE FUNCIONES
+                    La forma general de una superficie cuádrica es:
                 </div>
                 <div class="texto">
-                    Desde una perspectiva podemos citar una definición de limite respecto de una función, se dice que
-                    esta es continua cuando se encuentra definida en todos y cada uno de los puntos del intervalo donde
-                    se estudia, es decir que para cada valor de “x” siempre existe un valor de “y”.
+                    Ax2 + By2 + Cz2 + Dxy + Exz + Fyz + Gx+ Hy + Iz + J = 0
+                </div>
+                <div class="texto">
+                    Hay seis tipos básicos de superficies cuádricas: elipsoide, hiperboloide de una hoja, 
+                    hiperboloide de dos hojas, cono elíptico, paraboloide y paraboloide hiperbólico.
                 </div>
                 <div class="imagen">
-                    <p style="text-align: center; "> <img src="../../imagenes/unidad 1/limites.JPG" alt="imagen 1" width="400" height="200"></p>
-                    <br>
-                </div>
-                <div class="imagen">
-                    <p style="text-align: center; "> <img src="../../imagenes/unidad 1/ejemplo 3.8.JPG" alt="imagen 1" width="700" height="500"></p>
+                    <p style="text-align: center; "> <img src="../../imagenes/unidad 1/elipsoide.JPG" alt="imagen 1" width="600" height="200"></p>
                 </div>
             </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         </section>
         <aside id="lateral">
             <div class="caja">
