--- a/referencias.html
+++ b/referencias.html
@@ -37,9 +37,18 @@
                         Funciones de varias variables - Diario de Cálculo Vectorial.
                          (s. f.). Recuperado 6 de abril de 2021.
                     </a></p>
+                    <p class="link"><a href="https://www.mate.unlp.edu.ar/practicas/54_4_0409201702416.pdf">
+                        Mate unlp. (s. f.). Recuperado 7 de abril de 2021.
+                    </a></p>
                     <br>
                     <li>Planos y superficies</a></li>
                     <br>
+                    <p class="link"><a href="https://www.superprof.es/diccionario/matematicas/geometria/planos.html">
+                        Diccionario de Matemáticas, Superprof. (s. f.). el plano. Recuperado 7 de abril de 2021
+                    </a></p>
+                    <p class="link"><a href="https://www.geogebra.org/m/pdbrPrMz">
+                        Superficie cuádricas. (s. f.). Recuperado 7 de abril de 2021
+                    </a></p>
                     <li>Limites y continuidad en funciones de 3 variables</li>
                     <br>
                     <p class="unidad">Unidad 2</p>
