--- a/temario.html
+++ b/temario.html
@@ -11,7 +11,7 @@
     <div id="general">
         <header id="header">
             <h1>
-                REFERENCIAS
+                TEMARIO
             </h1>
         </header>
         <nav id="menu">
