--- a/temario.html
+++ b/temario.html
@@ -34,9 +34,9 @@
                     <li><a href="temas/unidad1/funciones.html">Funciones escalares de varias variables</a></li>
                     <br>
                     <br>
-                    <li>Planos y superficies</a></li>
+                    <li><a href="temas/unidad1/planos.html">Planos y superficies</a></li>
                     <br>
-                    <li>Limites y continuidad en funciones de 3 variables</li>
+                    <li><a href="temas/unidad1/limites.html">Limites y continuidad en funciones de 3 variables</a></li>
                     <br>
                     <p class="unidad">Unidad 2</p>
                     <br>
