--- a/temas/unidad1/funciones.html
+++ b/temas/unidad1/funciones.html
@@ -68,6 +68,8 @@
                 </div>
             </div>
         </section>
+
+
         <aside id="lateral">
             <div class="caja">
                 <h2>TEMARIO</h2>
@@ -80,7 +82,7 @@
                         <br>
                         <li><a href="../../temas/unidad1/planos.html">Planos y superficies</a></li>
                         <br>
-                        <li><a href="">Limites y continuidad en funciones de 3 variables</a></li>
+                        <li><a href="../../temas/unidad1/limites.html">Limites y continuidad en funciones de 3 variables</a></li>
                         <br>
                         <p class="unidad">Unidad 2</p>
                         <br>
