--- a/temas/unidad1/planos.html
+++ b/temas/unidad1/planos.html
@@ -6,7 +6,6 @@
     <title>Unidad 1</title>
     <link rel="stylesheet" type="text/css" href="../../css/temas.css" />
 </head>
-
 <body>
     <div id="general">
         <header id="header">
@@ -39,7 +38,7 @@
                     Los planos vienen determinados por:
                 </div>
                 <div class="texto">
-                    3 puntos no alineados.
+                    3 puntos no alineados. 
                 </div>
                 <div class="texto">
                     Dos rectas que se cortan
@@ -78,6 +77,15 @@
                 <div class="imagen">
                     <p style="text-align: center; "> <img src="../../imagenes/unidad 1/elipsoide.JPG" alt="imagen 1" width="600" height="200"></p>
                 </div>
+                <div class="imagen">
+                    <p style="text-align: center; "> <img src="../../imagenes/unidad 1/hiperboloide.JPG" alt="imagen 1" width="600" height="200"></p>
+                </div>
+                <div class="imagen">
+                    <p style="text-align: center; "> <img src="../../imagenes/unidad 1/cono eliptico.JPG" alt="imagen 1" width="600" height="200"></p>
+                </div>
+                <div class="imagen">
+                    <p style="text-align: center; "> <img src="../../imagenes/unidad 1/paraboloide eliptico.JPG" alt="imagen 1" width="600" height="200"></p>
+                </div>
             </div>
 
 
@@ -110,7 +118,7 @@
                         <br>
                         <li><a href="../../temas/unidad1/planos.html">Planos y superficies</a></li>
                         <br>
-                        <li><a href="">Limites y continuidad en funciones de 3 variables</a></li>
+                        <li><a href="../../temas/unidad1/limites.html">Limites y continuidad en funciones de 3 variables</a></li>
                         <br>
                         <p class="unidad">Unidad 2</p>
                         <br>
