--- a/referencias.html
+++ b/referencias.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
-    <meta charset="utf-8">
+<meta charset="utf-8">
+
 <head>
     <title>Temario</title>
     <link rel='stylesheet' type='text/css' media='screen' href='css/referencias.css'>
@@ -33,23 +34,60 @@
                     <br>
                     <li>Funciones escalares de varias variables</li>
                     <br>
-                    <p class="link"><a href="https://sites.google.com/site/calculovectorialhakim/funciones-de-varias-variables">
-                        Funciones de varias variables - Diario de Cálculo Vectorial.
-                         (s. f.). Recuperado 6 de abril de 2021.
-                    </a></p>
+                    <p class="link"><a
+                            href="https://sites.google.com/site/calculovectorialhakim/funciones-de-varias-variables">
+                            Funciones de varias variables - Diario de Cálculo Vectorial.
+                            (s. f.). Recuperado 6 de abril de 2021.
+                        </a></p>
+                    <br>
                     <p class="link"><a href="https://www.mate.unlp.edu.ar/practicas/54_4_0409201702416.pdf">
-                        Mate unlp. (s. f.). Recuperado 7 de abril de 2021.
-                    </a></p>
+                            Mate unlp. (s. f.). Recuperado 7 de abril de 2021.
+                        </a></p>
                     <br>
                     <li>Planos y superficies</a></li>
                     <br>
                     <p class="link"><a href="https://www.superprof.es/diccionario/matematicas/geometria/planos.html">
-                        Diccionario de Matemáticas, Superprof. (s. f.). el plano. Recuperado 7 de abril de 2021
-                    </a></p>
+                            Diccionario de Matemáticas, Superprof. (s. f.). el plano. Recuperado 7 de abril de 2021
+                        </a></p>
+                    <br>
                     <p class="link"><a href="https://www.geogebra.org/m/pdbrPrMz">
-                        Superficie cuádricas. (s. f.). Recuperado 7 de abril de 2021
-                    </a></p>
+                            Superficies cuádricas. (s. f.). Recuperado 7 de abril de 2021
+                        </a></p>
+                    <br>
                     <li>Limites y continuidad en funciones de 3 variables</li>
+                    <br>
+                    <p class="link"><a href="https://es.khanacademy.org/math/ap-calculus-ab/ab-limits-new">
+                            Khan Academy. (s. f.). Límites y continuidad | Cálculo avanzado 1 (AP Calculus AB).
+                            Recuperado 12 de abril de 2021
+                        </a></p>
+                    <br>
+                    <p class="link"><a
+                            href="https://tecdigital.tec.ac.cr/revistamatematica/cursos-linea/CALCULODIFERENCIAL/curso-elsie/limitesycontinuidad/html/node5.html">
+                            Li­mites y continuidad. (s. f.). Recuperado 12 de abril de 2021.
+                        </a></p>
+                    <br>
+                    <p class="link"><a href="https://www.universoformulas.com/matematicas/analisis/limites/">
+                            Serra, B. R. (2020, 19 diciembre). Límites. Recuperado 12 de abril de 2021.
+                        </a></p>
+                    <br>
+                    <p class="link"><a
+                            href="https://www.superprof.es/apuntes/escolar/matematicas/calculo/funciones/continuidad-de-una-funcion.html">
+                            M., M., R., & J. (2020, 20 noviembre). Funcion continua | Superprof. Recuperado 12 de abril
+                            de 2021. </a></p>
+                    <br>
+                    <p class="link"><a
+                            href="https://www.universoformulas.com/matematicas/analisis/continuidad-funciones/#:%7E:text=La%20continuidad%20de%20funciones%20es,dibujarse%20de%20un%20solo%20trazo.&text=Se%20dice%20que%20la%20funci%C3%B3n,y%20la%20gr%C3%A1fica%20se%20rompe.">
+                            Serra, B. R. (2020a, octubre 24). Continuidad de funciones. Recuperado 12 de abril
+                            de 2021. </a></p>
+                    <br>
+                    <p class="link"><a href="https://www.youtube.com/watch?v=sHuqCyEVNCs">
+                            Estimados Estadisticos. (2015, 26 mayo). Limite y continuidad de una función. YouTube. </a>
+                    </p>
+                    <br>
+                    <p class="link"><a href="https://www.calculisto.com/topics/funciones-de-varias-variables/summary/219">
+                        Continuidad | Calculisto - Resúmenes y Clases de Cálculo. (s. f.). Recuperado 12 de abril de 2021.
+                    </a>
+                    </p>
                     <br>
                     <p class="unidad">Unidad 2</p>
                     <br>
@@ -75,11 +113,11 @@
                     <br>
                     <li>Integral en linea</li>
                 </ul>
-    
+
             </div>
         </container>
     </div>
-    
+
     <div class="clearfix"></div>
     <footer>
         <p class="pie">Fernando Hernandez Vazquez | Fernando Perez Suarez</p>
